add carousel page add top menu

--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <link rel="icon" type="image/svg+xml" href="/poke-x.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Poke Ex</title>
+    <script>
+      // Set theme class immediately to prevent flash
+      (function() {
+        const root = document.documentElement;
+        const savedTheme = localStorage.getItem('theme');
+        const prefersLight = window.matchMedia('(prefers-color-scheme: light)').matches;
+        const theme = savedTheme || (prefersLight ? 'light' : 'dark');
+        
+        // Tailwind only checks for 'dark' class
+        if (theme === 'dark') {
+          root.classList.add('dark');
+        } else {
+          root.classList.remove('dark');
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
